--- a/docs/media/davewhipp-screen.css
+++ b/docs/media/davewhipp-screen.css
@@ -103,6 +103,7 @@ li {
 	/*second line indent*/
 	padding-left: 1.25em;
 	text-indent: -1.25em;
+	padding-right: 9em;
 	/*color: #777;*/
 }
 
@@ -192,4 +193,5 @@ strong {
 /*
 @media only screen and (max-width: 480px) {
 	make one column somehow...
+
 }*/
